--- a/style.css
+++ b/style.css
@@ -15,20 +15,22 @@
 }
 
 .container{
-    background-color: black;
-    height: 100px;
+    background-color: whitesmoke;
+    height: 4200px;
     max-width: 50%;
     margin: auto;
     
     display: flex;
     flex-direction: column;
-
+    
     
 
 }
 
 .header {
-    border: 2px solid black;
+    
+    padding-bottom: 10px;
+    
     color: tomato;
     height: 30px;
     font-size: 25px;
@@ -41,8 +43,10 @@
 
 .main{
     height: 1100px;
+    margin-top: 10px;
+    padding-bottom: 50px;
     
-    border: 1px solid black;
+    
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -56,7 +60,7 @@
     background-color: white;
     
     position: absolute;
-    top: 20px;
+    top: -20px;
     left: 20px;
 }
 
@@ -64,7 +68,7 @@
     background-color: white;
     
     position: absolute;
-    top: 20px;
+    top: -20px;
     right: 20px;
     
 }
@@ -85,6 +89,7 @@
 
 img {
     max-width: 100%;
+    
 }
 
 .footer{
@@ -92,7 +97,7 @@ img {
     font-size: 20px;
     background-color: white;
     height: 50px;
-    border: 6px solid black;
+    border: 1px solid black;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
